# Multi-strategy-backtest-engine

./: LICENSE  README.md  pyproject.toml
docs/: ai_assistant_context.md  architecture_tree.md  core_engine_guide.md
examples/: run_example.py
history/: Backtest_Framework_Structure.drawio  V1.py  V2.2.py  V2.py  V3.3.py  V3.py  V4.py
src/: backtest
src/backtest_engin/: NJITEngine.py  StrategyEngine.py  __init__.py  adaptive_engine.py  backtest_bundle.py  core_engine.py  event_log.py  execution_binding.py  feature_compiler.py  regime_plot.py  regime_policy.py  rolling_engine.py  stateful_config.py  strategy_module_loader.py
src/backtest_engine/: DataPipeline.py  Exit_system.py  NJITEngine.py  Njit_plots.py  __init__.py  adaptative_engine.py  config.py  context_engine.py  core_engine.py  engine.py  event_log.py  execution_binding.py  exit_context.py  exit_strategy_system.py  indicators.py  multi_setup_layer.py  partial_config.py  pipeline.py  position_rules.py  regime_policy.py  rule_compiler.py  signals.py  stateful_config.py  strategy_module_loader.py  user_exit_strategies.py
srcr/backtest_engine/: active_user_exit_strategies.py  exit_context.py  exit_strategy_system.py  feature.py  pipeline_config.py  position_rules.py  rule_compiler.py  strategy_recipes.py
tests/: __init__.py  _support.py  test_basic_run.py  test_data_pipeline.py  test_import.py  test_setup_pipeline.py
