[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backtest-engine"
version = "0.1.0"
description = "Multi-strategy backtesting engine for regime-aware strategy research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2.5",
    "pandas>=2.2,<3.0",
    "plotly>=6.0,<7.0",
    "numba>=0.64,<0.65",
    "scipy>=1.16,<1.18",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
